<resources>
    <string name="app_name">末族学府</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mozu">末族学府</string>
    <string name="pass_word">密码</string>
    <string name="login_name">用户名</string>
    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
    <string name="register_password">密码</string>
    <string name="register_email">邮箱</string>
    <string name="register_user_name">用户名</string>
    <string name="register">注册</string>
    <string name="calendar_back">返回</string>
    <string name="game_asstes">游戏资源</string>
    <string name="game_discussions">游戏讨论</string>
    <string name="more_games">更多游戏</string>
    <string name="content_more_games">这里还空空如也呢</string>
    <string name="setting_n_m">false</string>
</resources>
